--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@ function displayFoodItems(items) {
     });
 }
 <button>Filter by Category</button>
+<address>matefoodies@gmail.com</address>
 
 displayFoodItems(foodItems);
 
