--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@ function displayFoodItems(items) {
 }
 <button>Filter by Category</button>
 <address>matefoodies@gmail.com</address>
+<noframes><h1>About FoodMate</h1></noframes>
 
 displayFoodItems(foodItems);
 
