--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ function displayFoodItems(items) {
         foodList.appendChild(foodItem);
     });
 }
-<button>Filter by Category</button>
+<button>Filter by Category best food website-Updated</button>
 <address>matefoodies@gmail.com</address>
 <noframes><h1>About FoodMate</h1></noframes>
 
