--- a/index.html
+++ b/index.html
@@ -34,3 +34,5 @@ categoryFilter.addEventListener("change", () => {
     const filteredItems = selectedCategory === "All" ? foodItems : foodItems.filter(item => item.category === selectedCategory);
     displayFoodItems(filteredItems);
 });
+
+<h1>Hello change</h1>
