--- a/index.html
+++ b/index.html
@@ -34,5 +34,5 @@ categoryFilter.addEventListener("change", () => {
     const filteredItems = selectedCategory === "All" ? foodItems : foodItems.filter(item => item.category === selectedCategory);
     displayFoodItems(filteredItems);
 });
-
+<p>Welcome to FoodMate, your online destination for delicious food from around the world.</p>
 <h1>Hello change</h1>
