--- a/Pages/about.html
+++ b/Pages/about.html
@@ -3,3 +3,41 @@
 <p>Contact us at <a href="mailto:matefoodies@gmail.com">matefoodies@gmail.com</a> for any questions or concerns.</p>
 <h1>About foodmate</h1>
 
+<img src="https://via.placeholder.com/350x150" alt="FoodMate Logo">
+
+<style>
+body {
+    font-family: sans-serif;
+    margin: 20px;
+    line-height: 1.6;
+    color: #333;
+}
+
+h1 {
+    font-size: 2em;
+    margin-bottom: 1em;
+    color: #0056b3;
+}
+
+p {
+    margin-bottom: 1em;
+}
+
+a {
+    color: #0056b3;
+    text-decoration: none;
+}
+
+a:hover {
+    text-decoration: underline;
+}
+
+img {
+    max-width: 100%;
+    height: auto;
+    display: block;
+    margin: 20px auto;
+    border-radius: 5px;
+    box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+}
+</style>
