--- a/Pages/index.html
+++ b/Pages/index.html
@@ -1,3 +1,77 @@
+<head>
+<title>FoodMate</title>
+<!DOCTYPE html>
+<html>
+<head>
+<title>FoodMate</title>
+<script>
+    function addImages() {
+        const images = document.querySelectorAll('img');
+        images.forEach(img => {
+            if (!img.src.includes('http')) {
+                img.src = 'https://via.placeholder.com/200';
+            }
+        });
+    }
+    addImages();
+</script>
+<!DOCTYPE html>
+<html>
+<head>
+<title>FoodMate</title>
+<style>
+body {
+    font-family: sans-serif;
+    margin: 0;
+    padding: 0;
+}
+nav {
+    background-color: #f0f0f0;
+    padding: 10px;
+    text-align: center;
+}
+nav a {
+    margin: 0 10px;
+    text-decoration: none;
+    color: #333;
+}
+#food-list {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    grid-gap: 20px;
+    padding: 20px;
+}
+.food-item {
+    border: 1px solid #ccc;
+    padding: 10px;
+    text-align: center;
+}
+.food-item img {
+    max-width: 100%;
+    height: auto;
+}
+</style>
+</head>
+<body>
+<nav>
+  <a href="index.html">Home</a>
+  <a href="product.html">Products</a>
+  <a href="bestsellers.html">Bestsellers</a>
+  <a href="about.html">About</a>
+</nav>
+<h1>Welcome to FoodMate</h1>
+<p>Your online destination for delicious food!</p>
+<section id="food-list"></section>
+
+<select id="category-filter">
+    <option value="All">All Categories</option>
+    <option value="Italian">Italian</option>
+    <option value="American">American</option>
+    <option value="Japanese">Japanese</option>
+    <option value="Mexican">Mexican</option>
+</select>
+
+<script>
 let foodItems = [
     { name: "Pizza", price: 10, image: "pizza.jpg", category: "Italian" },
     { name: "Burger", price: 8, image: "burger.jpg", category: "American" },
